Fix alignment for alerts and font sizes

--- a/src/scenes/Moves/Ppm/PPMPaymentRequest.css
+++ b/src/scenes/Moves/Ppm/PPMPaymentRequest.css
@@ -58,10 +58,6 @@
   width: 100%;
 }
 
-.ppm-payment-request-footer .usa-button-secondary {
-  margin-left: 1.5rem;
-}
-
 .usa-button {
   margin-right: 1.5rem;
 }
