--- a/src/scenes/Moves/Ppm/PaymentReview/PaymentReview.css
+++ b/src/scenes/Moves/Ppm/PaymentReview/PaymentReview.css
@@ -26,6 +26,7 @@
   margin-left: 0px;
   margin-bottom: 0px;
   margin-right: 0px;
+  font-family: "Source Sans Pro", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 }
 
 .doc-summary-container h3 {
